[FIX&ADD]Fixed some issues with the activities images and placed correctly the search icone when on mobile devices

--- a/style.css
+++ b/style.css
@@ -131,6 +131,9 @@
         min-width: 3rem;
         min-height: 3rem;
         background-color: var(--color-grey);
+    }
+    
+    .search__form__wrapper--icon--left {
         border-radius: 1rem 0rem 0rem 1rem;
     }
     
@@ -154,6 +157,10 @@
         color: var(--color-black);
     }
     
+    .search__form__search--button {
+        position: relative;
+    }
+    
     .search__form--button {
         font-size: 1.125rem;
         font-weight: 600;
@@ -165,6 +172,31 @@
         height: 3rem;
         border-radius: 0rem 1rem 1rem 0rem;
         border: none;
+    }
+    
+    .search__form__hidden {
+        display: none;
+        width: 3rem;
+        height: 3rem;
+        position: absolute;
+        top: -1.5rem;
+        left: -3rem;
+        background-color: var(--color-white);
+        border-radius: 1rem 0rem 0rem 1rem;
+    }
+    
+    .search__form__wrapper--icon--right {
+        display: none;
+        position: absolute;
+        top: -1.5rem;
+        left: -3rem;
+        background-color: var(--color-blue);
+        border-radius: 1rem;
+        cursor: pointer;
+    }
+    
+    .fa-search {
+        color: var(--color-white);
     }
     /* Filters Zone */
     
@@ -576,10 +608,15 @@
             display: none;
             z-index: -1;
         }
-        .search__form__wrapper--icon {
+        .search__form__hidden {
             display: flex;
             z-index: 1;
             border-bottom: 1px solid var(--color-white);
+        }
+        .search__form__wrapper--icon--right {
+            display: flex;
+            z-index: 2;
+            border-bottom: 1px solid var(--color-blue);
         }
     }
     
